# rules_xar

./: .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  xarify.bzl
examples/custom_make_xar/: BUILD.bazel  make_xar2.sh
examples/external_python/: BUILD.bazel  README.md
examples/external_python/libfoo/: foobar.py
examples/otherdir/: BUILD.bazel
examples/simple/: BUILD.bazel  test.py
examples/subdir/: BUILD.bazel  test.py
examples/subdir/libfoo/: BUILD.bazel  foofoo.py
otherdir/: bar.py
tools/: BUILD.bazel  make_xar_wrapper.py  make_xar_wrapper_test.py
