load("//:xarify.bzl", "xar_binary")

xar_binary(
    name = "test_xar",
    external_python_prefix = "/usr/local/python-bazel",
    main = ":test_py",
)

filegroup(
    name = "test_zip",
    srcs = [":test_py"],
    output_group = "python_zip_file",
)

py_binary(
    name = "test_py",
    srcs = ["test.py"],
    main = "test.py",
    deps = [
        "//examples/otherdir:libbar",
        "//examples/subdir/libfoo:foobar_lib",
    ],
)
