load("//:xarify.bzl", "xar_binary")

xar_binary(
    name = "test_xar",
    src = ":test_py",
    main = ":test_py",
)

py_binary(
    name = "test_py",
    srcs = ["test.py"],
    main = "test.py",
    deps = [
        "//examples/otherdir:libbar",
        "//examples/subdir/libfoo:foobar_lib",
    ],
)
